# lct-dvmte

./: .dockerignore  .gitignore  Dockerfile  LANGSMITH_TRACE_LINK.md  README.md  config.docker.toml  config.example.toml  config.toml  docker-compose.yml
.data/chroma/: chroma.sqlite3
.skills/: skills.json
devmate_app/: README.md  pyproject.toml
devmate_app/.skills/: skills.json
devmate_app/docs/: frontend_best_practices.md  internal_fastapi_guidelines.md  python_project_template.md
devmate_app/src/devmate/: cli.py  config.py  mcp_client.py  models.py  rag.py  skills.py  tools.py  trace_export.py  web.py  web_template.html
devmate_app/src/devmate/agent/: base.py  deep_agent.py  devmate_agent.py  memory.py  model.py
mcp_server/: README.md  pyproject.toml
mcp_server/src/mcp_server/: server.py
scripts/: smoke_runtime.py
workspace_output/: README.md  index.html  script.js  simple.html  styles.css
workspace_output/container_write_probe/: probe.txt
workspace_output/fastapi_minimal/: README.md  pyproject.toml
workspace_output/fastapi_scaffold/: README.md  pyproject.toml
workspace_output/gym-finder/: README.md  index.html
workspace_output/hiking-trail-recommender/: README.md  index.html  script.js  styles.css
workspace_output/hiking-trails-china/: README.md  index.html  script.js  styles.css
workspace_output/hiking-trails-site/: README.md  index.html  script.js  styles.css
workspace_output/hiking-trails-website/: README.md  index.html  script.js  styles.css
workspace_output/hiking_api/: README.md  pyproject.toml
workspace_output/hiking_app/: README.md  pyproject.toml
workspace_output/hiking_trails_web/: index.html  script.js  styles.css
workspace_output/hospital-finder/: README.md  index.html  script.js  styles.css
workspace_output/hospital_finder/: README.md  pyproject.toml
workspace_output/minimal-webpage/: README.md  index.html  script.js  styles.css
workspace_output/multi-node-test/: README.md  index.html  script.js  styles.css
workspace_output/nearby-restaurants/: README.md  index.html
(+45 files in other folders)
