[project]
name = "devmate_app"
version = "0.1.0"
description = "DevMate AI Agent with RAG, MCP, and Skills"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "deepagents>=0.4.12",
    "fastapi>=0.116.0",
    "langchain>=1.2.10",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.70",
    "langchain-mcp-adapters>=0.1.6",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.3.45",
    "pydantic>=2.11.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
devmate-chat = "devmate.cli:main"
devmate-web = "devmate.web:main"
devmate-ingest = "devmate.rag:main"
devmate-mcp-test = "devmate.mcp_client:main"
devmate-export-trace = "devmate.trace_export:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/devmate"]
