[project]
name = "hiking_app"
version = "0.1.0"
description = "Generated FastAPI project by DevMate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
